DDP-5758 - refactor FormInstanceTest; remove unised code from FormInstance; reorganise AI Builder module structure; remove validation rule message detection code from ActivityDefStore